# dailydevq-main

./: .flake8  .flaskenv  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_split.py
.github/workflows/: backup-s3.yml  ci.yml  frontend-tests.yml
README/: README-en.md
backend/functions/: user_service.py
frontend/app/: __init__.py  app.py  routes.py
frontend/app/static/css/: dashboard.css  login.css  style.css
frontend/app/templates/: base.html  dashboard.html  index.html  login.html
infrastructure/: dynamodb.tf  outputs.tf
infrastructure/aws/: providers.tf  variables.tf
requirements/: base.txt  dev.txt  test.txt
src/backend/functions/: user_service.py
src/backend/functions/email_sender/: handler.py
src/frontend/app/: app.py  handlers.py  routes.py
src/frontend/app/react/: package-lock.json  package.json  tsconfig.json
src/frontend/app/react/src/app/: layout.tsx  page.tsx
src/frontend/app/react/src/app/login/: page.tsx
src/frontend/app/react/src/components/: footer.tsx  header.tsx  language-toggle.tsx  login-form.tsx  theme-toggle.tsx
src/frontend/app/react/src/components/ui/: button.tsx  calendar.tsx
src/frontend/app/react/src/constants/: content.ts
src/frontend/app/react/src/pages/: login-page.tsx
src/frontend/app/static/css/: login.css
src/frontend/app/static/js/: login.js
src/frontend/app/templates/: 404.html  500.html  dashboard.html
src/frontend/app/templates/dashboard/: generate_question.html
src/tests/: test_email_sender.py
