# 빌드 시스템 설정 (Python 패키징 표준 PEP 518)
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# 패키지 디스커버리 설정 (setuptools.find_packages 사용)
[tool.setuptools.packages.find]
where = ["src"]  # src 폴더 내부에서 패키지 탐색

# 프로젝트 기본 정보
[project]
name = "dailydevq"
version = "0.1.0"
description = "A technical interview preparation tool"
dependencies = [
    "Flask==3.1.0",
    "blinker==1.9.0",
    "click==8.1.7",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.5",
    "MarkupSafe==3.0.2",
    "Werkzeug==3.1.3",
    "python-dotenv==1.0.1",
    "typing_extensions==4.12.2",
    "boto3==1.35.63",
    "botocore==1.35.63",
    "jmespath==1.0.1",
    "python-dateutil==2.9.0.post0",
    "six==1.16.0",
    "s3transfer==0.10.3",
    "flask-bootstrap==3.3.7",
    "flask_login==0.6.3",
    "openai==1.58.1"
]

# 선택적 의존성 그룹 (개발 및 테스트 환경)
[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "flake8==7.1.1",
    "mccabe==0.7.0",
    "mypy-extensions==1.0.0",
    "packaging==24.2",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "pycodestyle==2.12.1",
    "pyflakes==3.2.0"
]
test = [
    "pytest==8.3.4",
    "exceptiongroup==1.2.2",
    "iniconfig==2.0.0",
    "pytest-cov==6.0.0",
    "pluggy==1.5.0",
    "tomli==2.1.0"
]

# CLI 실행 파일 설정 (패키지 설치 후 실행 가능)
[project.scripts]
dailydevq = "dailydevq.cli:main"
